[package]
name = "libp2p-rust-python-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libp2p_rust_python_bindings"
crate-type = ["cdylib"]

[dependencies]
libp2p = "0.44.0"
pyo3 = { version = "0.16.3", features = ["extension-module"] }
pyo3-asyncio = { version = "0.16", features = ["async-std-runtime"] }
